# src/schemas/play-card.schema.js
@@ -1,0 +1,8 @@
+const joi = require('joi');
+
+const playCard = joi.object({
+    cardId: joi.string().required(),
+    newColor: joi.string().valid('RED', 'GREEN', 'BLUE', 'YELLOW', null).optional(),
+});
+
+module.exports = playCard;
