# swagger/swagger-output.json
@@ -123,6 +123,27 @@
         ]
       }
     },
+    "/games/{id}/status": {
+      "get": {
+        "tags": [
+          "Games"
+        ],
+        "description": "Get the status of a game by its ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/games/{id}": {
       "get": {
         "tags": [
@@ -175,9 +196,22 @@
                   "type": "number",
                   "example": 2
                 },
-                "status": {
-                  "type": "string",
-                  "example": "string"
+                "rules": {
+                  "type": "object",
+                  "properties": {
+                    "allowDrawFour": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "allowAccumulateDraw": {
+                      "type": "boolean",
+                      "example": false
+                    },
+                    "allowReverse": {
+                      "type": "boolean",
+                      "example": true
+                    }
+                  }
                 }
               }
             }
@@ -251,9 +285,22 @@
                   "type": "number",
                   "example": 2
                 },
-                "status": {
-                  "type": "string",
-                  "example": "string"
+                "rules": {
+                  "type": "object",
+                  "properties": {
+                    "allowDrawFour": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "allowAccumulateDraw": {
+                      "type": "boolean",
+                      "example": false
+                    },
+                    "allowReverse": {
+                      "type": "boolean",
+                      "example": true
+                    }
+                  }
                 }
               }
             }
@@ -452,6 +499,32 @@
         "responses": {
           "default": {
             "description": ""
+          }
+        }
+      }
+    },
+    "/games/{gameId}/cards/hand": {
+      "get": {
+        "tags": [
+          "GameCards"
+        ],
+        "description": "Get the hand of a player in a specific game",
+        "parameters": [
+          {
+            "name": "gameId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -797,6 +870,228 @@
             "apiKeyAuth": []
           }
         ]
+      }
+    },
+    "/games/{gameId}/distribute": {
+      "post": {
+        "tags": [
+          "GameEngine"
+        ],
+        "description": "Distribute the cards in a game between the players",
+        "parameters": [
+          {
+            "name": "gameId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "distribute cards",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "cardsPerPlayer": {
+                  "type": "number",
+                  "example": 0
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      }
+    },
+    "/games/{gameId}/play": {
+      "put": {
+        "tags": [
+          "GameEngine"
+        ],
+        "description": "Play a card from the hand. Put a color if the card is multicolor",
+        "parameters": [
+          {
+            "name": "gameId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Play a card",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "cardId": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "newColor": {
+                  "type": "string",
+                  "example": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      }
+    },
+    "/games/{gameId}/draw": {
+      "put": {
+        "tags": [
+          "GameEngine"
+        ],
+        "description": "Draw a card from the deck.",
+        "parameters": [
+          {
+            "name": "gameId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      }
+    },
+    "/games/{gameId}/say-uno": {
+      "patch": {
+        "tags": [
+          "GameEngine"
+        ],
+        "description": "Say uno.",
+        "parameters": [
+          {
+            "name": "gameId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      }
+    },
+    "/games/{gameId}/challenge": {
+      "post": {
+        "tags": [
+          "GameEngine"
+        ],
+        "description": "Challenge another player when he has not said uno",
+        "parameters": [
+          {
+            "name": "gameId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Challenge a player",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "challengedPlayerId": {
+                  "type": "string",
+                  "example": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      }
+    },
+    "/games/{gameId}/history": {
+      "get": {
+        "tags": [
+          "History"
+        ],
+        "description": "get the history of a game",
+        "parameters": [
+          {
+            "name": "gameId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
       }
     }
   }
